// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-14 emotion-15"
                  id="radio-value-1"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-1"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="radio-value-2"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-2"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-14 emotion-15"
                  id="radio-value-1"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-1"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="radio-value-2"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-2"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-38 {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-14 emotion-15"
                  id="radio-value-1"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-1"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="radio-value-2"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-2"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="emotion-38 emotion-7"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-38 {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-14 emotion-15"
                  id="radio-value-1"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-1"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-10 emotion-11"
            >
              <div
                aria-disabled="false"
                class="emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="radio-value-2"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23"
                  for="radio-value-2"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="emotion-38 emotion-7"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
